# HelmAgent

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  install.sh
docs/: dogfood.md  install.md  quickstart-real-run.md
docs/agent-integrations/: main-agent-template.md  main-agent.md
docs/superpowers/notes/: 2026-05-09-agent-ops-center-brainstorm.md  2026-05-09-helm-agent-brainstorm.md
docs/superpowers/plans/: 2026-05-09-agent-ops-center.md  2026-05-09-helm-agent.md  2026-05-11-helm-agent-acp-adapter.md  2026-05-11-helm-agent-agent-integration-sprint.md  2026-05-11-helm-agent-install-system.md  2026-05-11-helm-agent-interactive-board.md  2026-05-11-helm-agent-phase-2-review-queue.md  2026-05-11-helm-agent-phase-3a-board-agent-template.md  2026-05-11-helm-agent-task-brief.md  2026-05-11-helm-agent-tmux-brief-injection.md  2026-05-11-helm-agent-tmux-sync.md  2026-05-12-helm-agent-real-run-quickstart.md  2026-05-12-helm-agent-usage-readiness.md  2026-05-13-helm-agent-acp-human-handoff.md
docs/superpowers/specs/: 2026-05-09-agent-ops-center-design.md  2026-05-09-helm-agent-design.md  (+11 more)
scripts/: real_run_smoke.sh
src/: acp_adapter.rs  adapter.rs  brief.rs  cli.rs  doctor.rs  domain.rs  guidance.rs  launcher.rs  lib.rs  main.rs  output.rs  paths.rs  policy.rs  runtime_profile.rs  store.rs  task_actions.rs  web_board.rs
tests/: brief_tests.rs  cli_task_flow.rs  domain_tests.rs  guidance_tests.rs  install_script_tests.rs  launcher_tests.rs  policy_tests.rs  real_run_smoke_tests.rs  store_tests.rs  web_board_tests.rs
(+1 files in other folders)
