[package]
name = "helm-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helm-agent"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "0.11.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
